# cluster-stat

./: .gitignore  CMakeClean.sh  CMakeLists.txt  README.md  cluster-stat.files  cluster-stat.includes  wolf-stat-server.files  wolf-stat-server.includes
etc/: CMakeLists.txt  node-stat-client.service  wolf-stat-server.service  wolf-stat-server.xml
share/: wolf-stat-client.cron
src/: CMakeLists.txt
