# ==============================================================================
# WOLF CMake File
# ==============================================================================

INSTALL(FILES
            wolf-stat-server.xml
       DESTINATION
            etc
        PERMISSIONS
            OWNER_READ OWNER_WRITE GROUP_READ
        )       
